# minecraft-clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.bat
assets/shaders/basic/: basic.frag  basic.vert
assets/shaders/chunks/: chunks.frag
assets/shaders/crosshair/: crosshair.frag  crosshair.vert
assets/shaders/solid/: solid.frag
lib/stb/: stb.c
src/: main.c
src/core/: game.c  game.h  time.c  time.h
src/entity/: camera.c  camera.h  picker.c  picker.h  player.c  player.h
src/gfx/: atlas.c  atlas.h  debug.c  debug.h  index_buffer.c  index_buffer.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h  vertex_buffer_layout.c  vertex_buffer_layout.h
src/input/: input.c  input.h
src/util/: assets.c  assets.h  config.h.in  util.c  util.h
src/world/: blockmesh.c  blockmesh.h  chunk.c  chunk.h  world.c  world.h
src/world/block/: blocktypes.h
